--- a/CoinKeeper/Form Files/addtransactionwindow.ui
+++ b/CoinKeeper/Form Files/addtransactionwindow.ui
@@ -122,103 +122,6 @@
     </widget>
    </item>
    <item>
-    <widget class="QWidget" name="widget" native="true">
-     <layout class="QHBoxLayout" name="horizontalLayout_6">
-      <item>
-       <widget class="QGroupBox" name="groupBoxInternalTransaction">
-        <property name="font">
-         <font>
-          <family>Arial</family>
-          <pointsize>10</pointsize>
-          <weight>75</weight>
-          <bold>true</bold>
-         </font>
-        </property>
-        <property name="title">
-         <string>Profilinterne Transaktion</string>
-        </property>
-        <layout class="QVBoxLayout" name="verticalLayout_3">
-         <item>
-          <widget class="QCheckBox" name="checkBoxActivateInternalTransaction">
-           <property name="font">
-            <font>
-             <family>Arial</family>
-             <pointsize>10</pointsize>
-             <weight>75</weight>
-             <bold>true</bold>
-            </font>
-           </property>
-           <property name="text">
-            <string>Aktivieren</string>
-           </property>
-          </widget>
-         </item>
-         <item>
-          <widget class="QWidget" name="widgetTargetAccount" native="true">
-           <layout class="QHBoxLayout" name="horizontalLayout_9">
-            <property name="leftMargin">
-             <number>0</number>
-            </property>
-            <property name="rightMargin">
-             <number>0</number>
-            </property>
-            <item>
-             <widget class="QLabel" name="lblTargetAccount">
-              <property name="enabled">
-               <bool>false</bool>
-              </property>
-              <property name="maximumSize">
-               <size>
-                <width>85</width>
-                <height>16777215</height>
-               </size>
-              </property>
-              <property name="font">
-               <font>
-                <family>Arial</family>
-                <pointsize>12</pointsize>
-                <weight>75</weight>
-                <bold>true</bold>
-               </font>
-              </property>
-              <property name="text">
-               <string>Ziel-Konto:</string>
-              </property>
-             </widget>
-            </item>
-            <item>
-             <widget class="QComboBox" name="comboBoxChooseTargetAccount">
-              <property name="enabled">
-               <bool>false</bool>
-              </property>
-              <property name="font">
-               <font>
-                <family>Arial</family>
-                <pointsize>12</pointsize>
-                <weight>75</weight>
-                <bold>true</bold>
-               </font>
-              </property>
-              <property name="duplicatesEnabled">
-               <bool>true</bool>
-              </property>
-              <item>
-               <property name="text">
-                <string>Konto auswählen</string>
-               </property>
-              </item>
-             </widget>
-            </item>
-           </layout>
-          </widget>
-         </item>
-        </layout>
-       </widget>
-      </item>
-     </layout>
-    </widget>
-   </item>
-   <item>
     <widget class="QWidget" name="widgetValueDateDescription" native="true">
      <layout class="QHBoxLayout" name="horizontalLayout_4">
       <property name="bottomMargin">
@@ -240,6 +143,9 @@
           <widget class="QWidget" name="widgetValue" native="true">
            <layout class="QHBoxLayout" name="horizontalLayout_2">
             <property name="leftMargin">
+             <number>0</number>
+            </property>
+            <property name="topMargin">
              <number>0</number>
             </property>
             <property name="rightMargin">
@@ -390,13 +296,110 @@
        <widget class="QCalendarWidget" name="calendarWidget">
         <property name="minimumSize">
          <size>
-          <width>251</width>
+          <width>320</width>
           <height>191</height>
          </size>
         </property>
         <property name="gridVisible">
          <bool>true</bool>
         </property>
+       </widget>
+      </item>
+     </layout>
+    </widget>
+   </item>
+   <item>
+    <widget class="QWidget" name="widget" native="true">
+     <layout class="QHBoxLayout" name="horizontalLayout_6">
+      <item>
+       <widget class="QGroupBox" name="groupBoxInternalTransaction">
+        <property name="font">
+         <font>
+          <family>Arial</family>
+          <pointsize>10</pointsize>
+          <weight>75</weight>
+          <bold>true</bold>
+         </font>
+        </property>
+        <property name="title">
+         <string>Profilinterne Transaktion</string>
+        </property>
+        <layout class="QVBoxLayout" name="verticalLayout_3">
+         <item>
+          <widget class="QCheckBox" name="checkBoxActivateInternalTransaction">
+           <property name="font">
+            <font>
+             <family>Arial</family>
+             <pointsize>10</pointsize>
+             <weight>75</weight>
+             <bold>true</bold>
+            </font>
+           </property>
+           <property name="text">
+            <string>Aktivieren</string>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QWidget" name="widgetTargetAccount" native="true">
+           <layout class="QHBoxLayout" name="horizontalLayout_9">
+            <property name="leftMargin">
+             <number>0</number>
+            </property>
+            <property name="rightMargin">
+             <number>0</number>
+            </property>
+            <item>
+             <widget class="QLabel" name="lblTargetAccount">
+              <property name="enabled">
+               <bool>false</bool>
+              </property>
+              <property name="maximumSize">
+               <size>
+                <width>160</width>
+                <height>16777215</height>
+               </size>
+              </property>
+              <property name="font">
+               <font>
+                <family>Arial</family>
+                <pointsize>12</pointsize>
+                <weight>75</weight>
+                <bold>true</bold>
+               </font>
+              </property>
+              <property name="text">
+               <string>Verbundenes Konto:</string>
+              </property>
+             </widget>
+            </item>
+            <item>
+             <widget class="QComboBox" name="comboBoxChooseTargetAccount">
+              <property name="enabled">
+               <bool>false</bool>
+              </property>
+              <property name="font">
+               <font>
+                <family>Arial</family>
+                <pointsize>12</pointsize>
+                <weight>75</weight>
+                <bold>true</bold>
+               </font>
+              </property>
+              <property name="duplicatesEnabled">
+               <bool>true</bool>
+              </property>
+              <item>
+               <property name="text">
+                <string>Konto auswählen</string>
+               </property>
+              </item>
+             </widget>
+            </item>
+           </layout>
+          </widget>
+         </item>
+        </layout>
        </widget>
       </item>
      </layout>
@@ -477,14 +480,14 @@
  <tabstops>
   <tabstop>comboBoxChooseAccount</tabstop>
   <tabstop>comboBoxChooseLabel</tabstop>
-  <tabstop>checkBoxActivateInternalTransaction</tabstop>
-  <tabstop>comboBoxChooseTargetAccount</tabstop>
   <tabstop>radioButtonPositiv</tabstop>
   <tabstop>radioButtonNegativ</tabstop>
   <tabstop>spinBoxVK</tabstop>
   <tabstop>spinBoxNK</tabstop>
   <tabstop>textEditDescription</tabstop>
   <tabstop>calendarWidget</tabstop>
+  <tabstop>checkBoxActivateInternalTransaction</tabstop>
+  <tabstop>comboBoxChooseTargetAccount</tabstop>
   <tabstop>buttonAddTransaction</tabstop>
   <tabstop>buttonCancel</tabstop>
  </tabstops>
